--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,8 @@
                    target="/manifest/application" 
                    mode="merge">
           <application android:allowBackup="$BACKUP"/>
+	      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove"/>
+	      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove"/>
       </edit-config>
   </platform>
 </plugin>
