--- a/plugin.xml
+++ b/plugin.xml
@@ -15,9 +15,10 @@
                    target="/manifest/application" 
                    mode="merge">
           <application android:allowBackup="$BACKUP"/>
-	      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove"/>
-	      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove"/>
       </edit-config>
+	   <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
+  </config-file>
   </platform>
 </plugin>
 
