--- a/plugin.xml
+++ b/plugin.xml
@@ -15,11 +15,16 @@
                    target="/manifest/application" 
                    mode="merge">
           <application android:allowBackup="$BACKUP"/>
-	      <manifest xmlns:tools="http://schemas.android.com/tools" />
       </edit-config>
-	   <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
+
+ <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest" mode="merge">
+    <manifest xmlns:tools="http://schemas.android.com/tools" />
+  </edit-config>
+
+  <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
   </config-file>
+	  
   </platform>
 </plugin>
 
