--- a/plugin.xml
+++ b/plugin.xml
@@ -11,20 +11,18 @@
   </engines>
   <preference name="BACKUP" default="false"/>
   <platform name="android">
-      <edit-config file="AndroidManifest.xml" 
-                   target="/manifest/application" 
-                   mode="merge">
+      <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
           <application android:allowBackup="$BACKUP"/>
       </edit-config>
 
- <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest" mode="merge">
-    <manifest xmlns:tools="http://schemas.android.com/tools" />
-  </edit-config>
+	 <edit-config file="app/src/main/AndroidManifest.xml" target="/manifest" mode="merge">
+	    <manifest xmlns:tools="http://schemas.android.com/tools" />
+	  </edit-config>
 
-  <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
-          <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
-	  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove" />
-  </config-file>
+	  <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
+	          <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
+		  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove" />
+	  </config-file>
 	  
   </platform>
 </plugin>
