--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads" xmlns:rim="http://www.blackberry.com/ns/widgets" id="cordova-plugin-allow-backup" version="0.0.2">
+<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads" xmlns:rim="http://www.blackberry.com/ns/widgets" id="cordova-plugin-allow-backup" version="0.0.2">
   <name>cordova-plugin-allow-backup</name>
   <description>
 		To enable you to set the allowBackup property of a cordova-android application.
@@ -14,7 +14,9 @@
       <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
           <application android:allowBackup="$BACKUP"/>
       </edit-config>
-
+	<edit-config file="app/src/main/AndroidManifest.xml" target="/manifest" mode="merge">
+	    <manifest xmlns:tools="http://schemas.android.com/tools" />
+	  </edit-config>
 	  <config-file target="app/src/main/AndroidManifest.xml" parent="/*">
 		  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove" />
 	          <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
