--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,9 @@
 	          <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
 		  
 	  </config-file>
+
+
+	  <hook type="after_build" src="hooks/android/updatePermissions.js"/>
 	  
   </platform>
 </plugin>
